added multiple roms to importer. added download link and details to show.html

--- a/app/views/importer/import.html.erb
+++ b/app/views/importer/import.html.erb
@@ -1,2 +1,30 @@
-<%= @romCount %> in DB</br>
-<%= @importedCount %> Roms imported
+<p>
+<%= @nesRomCount %> NES Roms in DB</br>
+<%= @nesImportedRomCount %> NES Roms imported
+<%= @nesDeletedCount %> NES Roms deleted
+</p>
+<p>
+<%= @snesRomCount %> SNES Roms in DB</br>
+<%= @snesImportedRomCount %> SNES Roms imported
+<%= @snesDeletedCount %> SNES Roms deleted
+</p>
+<p>
+<%= @gbcRomCount %> GBC Roms in DB</br>
+<%= @gbcImportedRomCount %> GBC Roms imported
+<%= @gbcDeletedCount %> GBC Roms deleted
+</p>
+<p>
+<%= @gbaRomCount %> GBA Roms in DB</br>
+<%= @gbaImportedRomCount %> GBA Roms imported
+<%= @gbaDeletedCount %> GBA Roms deleted
+</p>
+<p>
+<%= @n64RomCount %> N64 Roms in DB</br>
+<%= @n64ImportedRomCount %> N64 Roms imported
+<%= @n64DeletedCount %> N64 Roms deleted
+</p>
+<p>
+<%= @segaRomCount %> SEGA Roms in DB</br>
+<%= @segaImportedRomCount %> SEGA Roms imported
+<%= @segaDeletedCount %> SEGA Roms deleted
+</p>
