--- a/app/views/roms/show.html.erb
+++ b/app/views/roms/show.html.erb
@@ -2,13 +2,32 @@
   <strong>Title:</strong>
   <%= @rom.title %>
 </p>
-
 <p>
   <strong>Description:</strong>
   <%= @rom.description %>
 </p>
 <p>
+  <strong>Publisher:</strong>
+  <%= @rom.publisher %>
+</p>
+<p>
+  <strong>Developer:</strong>
+  <%= @rom.developer %>
+</p>
+<p>
+  <strong>Rating:</strong>
+  <%= @rom.rating %>
+</p>
+<p>
+  <strong>Players:</strong>
+  <%= @rom.players %>
+</p>
+<p>
+  <a href="/nesroms/<%= @rom.filename%>">Download</a>
+</p>
+<p>
   <%= image_tag @rom.frontcover.url(:medium) %>
+  <%= image_tag @rom.backcover.url(:medium) %>
 </p>
 <div>
     <div id="emulator">
