--- a/app/views/roms/show.html.erb
+++ b/app/views/roms/show.html.erb
@@ -39,9 +39,6 @@
     </div>
 </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
-
 <script type="text/javascript">
 
     var resizeOwnEmulator = function(width, height)
@@ -60,8 +57,8 @@
             {
                 var flashvars =
                 {
-                    system : 'nes',
-                    url : '/nesroms/<%= @rom.filename %>'
+                    system : '<%= @rom.console %>',
+                    url : "/nesroms/<%=raw @rom.filename %>"
                 };
                 var params = {};
                 var attributes = {};
