added first version of background scraping with sucker_punch, used image links instead of DB images

--- a/app/views/importer/index.html.erb
+++ b/app/views/importer/index.html.erb
@@ -1,1 +1,11 @@
-<p>importer</p>
+<h1>Importer</h1>
+
+<p><%= link_to("Import All" importer_importAll) %></p>
+<p> Import NES titles</p>
+<p> Import SNES titles</p>
+<p> Import N64 titles</p>
+<p> Import GBA titles</p>
+<p> Import GB titles</p>
+<p> Import GBC titles</p>
+<p> Import SMS titles</p>
+<p> Import SMD titles</p>
