--- a/app/views/roms/show.html.erb
+++ b/app/views/roms/show.html.erb
@@ -23,6 +23,10 @@
   <%= @rom.players %>
 </p>
 <p>
+  <strong>Genres:</strong>
+  <%= @rom.genres.to_s %>
+</p>
+<p>
   <a href="/nesroms/<%= @rom.filename%>">Download</a>
 </p>
 <p>
