--- a/app/views/roms/index.html.erb
+++ b/app/views/roms/index.html.erb
@@ -22,15 +22,7 @@
   end
 
   g.column  name: "Genres" do |rom|
-    genres_string = ""
-    rom.genres.each do |genre|
-      if genres_string == ""
-        genres_string = genre.name
-      else
-       genres_string = genres_string + ", " + genre.name
-      end
-    end
-    genres_string
+    Genre.genreString(rom.genres)
   end
 end -%>
 
